编辑F12惊喜，修复模型切换错误，更改使用js，添加音乐循环播放

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <script src="assets/jquery.min.js?v=3.3.1"></script>
     <script src="assets/jquery-ui.min.js?v=1.12.1"></script>
-    <script src="Scripts/Index.js"></script>
+    <script src="assets/index2d.js"></script>
     <script src="assets/autoload.js"></script>
 </body>
 </html>
